--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="page" id="top">
 
             <!-- Home Section -->
-            <section class="home-section bg-dark-alfa-30 parallax-2" data-background="images/background.jpeg" id="home">
+            <section class="home-section bg-dark-alfa-30 parallax-2" data-background="images/black_background.jpeg" id="home">
                 <div class="js-height-full">
 
                     <!-- Hero Content -->
@@ -187,7 +187,7 @@
                               to all who are interested in the game.
                                 <br>
                                 <br>
-                                <a href="www.supersmashstats.com" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href='http://www.supersmashstats.com' target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                                 <a href="https://github.com/Learning-Fuze/c5.17_smash_stats/tree/dev" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
                             </div>
                             <div class="mfp-image">
@@ -508,7 +508,7 @@
 
 
             <!-- Google Map -->
-            <div class="google-map">
+            <!-- <div class="google-map">
 
                 <div data-address="Fullerton, CA, United States" id="map-canvas"></div>
 
@@ -527,11 +527,11 @@
                 </div>
 
             </div>
-            <!-- End Google Map -->
+           End Google Map  -->
 
 
             <!-- Foter -->
-            <footer class="page-section bg-gray-lighter footer pb-60">
+            <footer class="page-section bg-gray footer pb-60">
                 <div class="container">
 
                     <!-- Footer Logo -->
