--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/supersmashstats.png" alt="Work">
+                                    <img src="images/sss.png" alt="Work">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
@@ -224,7 +224,7 @@
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/othello.png" alt="Work">
+                                    <img src="images/reversi.png" alt="Work">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
@@ -254,7 +254,7 @@
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/drinkdrankdrunk.png" alt="Work">
+                                    <img src="images/ddd.png" alt="Work">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
