--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="page" id="top">
 
             <!-- Home Section -->
-            <section class="home-section bg-dark-alfa-30 parallax-2" data-background="images/black_background.jpeg" id="home">
+            <section class="home-section bg-dark-alfa-30 parallax-2" data-background="images/background-mountain.jpeg" id="home">
                 <div class="js-height-full">
 
                     <!-- Hero Content -->
