added reversi and ddd project files into portfolio

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                               choice of either the Dark or Light side of the force.
                                 <br>
                                 <br>
-                                <a href="reversi/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="http://hunhowardkim.fun/reversi/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                                 <a href="https://github.com/hunkim2/reversi/tree/hkim17" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
                             </div>
                             <div class="mfp-image">
@@ -249,7 +249,7 @@
 
                                 <br>
                                 <br>
-                                <a href="drinkdrankdrunk/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="http://hunhowardkim.fun/drinkdrankdrunk/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                                 <a href="https://github.com/dangdennis/drink-dont-drive" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
                             </div>
                             <div class="mfp-image">
