--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
         <link rel="stylesheet" href="css/style-responsive.css">
         <link rel="stylesheet" href="css/animate.min.css">
         <link rel="stylesheet" href="css/vertical-rhythm.min.css">
-        <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
-        <!-- <link rel="stylesheet" href="css/magnific-popup.css"> -->
         <link rel="stylesheet" href="css/index.css">
 
 
@@ -162,7 +160,6 @@
             <!-- Portfolio Section -->
             <section class="page-section" id="applications">
                 <div class="relative">
-
                     <h2 class="section-title font-alt mb-70 mb-sm-40">
                         Applications Developed
                     </h2>
@@ -505,32 +502,7 @@
                 </div>
             </section>
             <!-- End Contact Section -->
-
-
-            <!-- Google Map -->
-            <!-- <div class="google-map">
-
-                <div data-address="Fullerton, CA, United States" id="map-canvas"></div>
-
-                <div class="map-section">
-
-                    <div class="map-toggle">
-                        <div class="mt-icon">
-                            <i class="fa fa-map-marker"></i>
-                        </div>
-                        <div class="mt-text font-alt">
-                            <div class="mt-open">Open the map <i class="fa fa-angle-down"></i></div>
-                            <div class="mt-close">Close the map <i class="fa fa-angle-up"></i></div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-           End Google Map  -->
-
-
-            <!-- Foter -->
+            <!-- Footer -->
             <footer class="page-section bg-gray footer pb-60">
                 <div class="container">
 
@@ -542,7 +514,7 @@
 
                     <!-- Social Links -->
                     <div class="footer-social-links mb-110 mb-xs-60">
-                        <a href="https://www.linkedin.com/in/hun-kim-620149142/" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/hkim142/" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="https://github.com/hunkim2" title="Github" target="_blank"><i class="fa fa-github"></i></a>
                         <!-- <a href="" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a> -->
                     </div>
@@ -570,7 +542,6 @@
         <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
         <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/SmoothScroll.js"></script>
         <script type="text/javascript" src="js/jquery.scrollTo.min.js"></script>
         <script type="text/javascript" src="js/jquery.localScroll.min.js"></script>
         <script type="text/javascript" src="js/jquery.viewport.mini.js"></script>
@@ -579,12 +550,10 @@
         <script type="text/javascript" src="js/jquery.sticky.js"></script>
         <script type="text/javascript" src="js/jquery.parallax-1.1.3.js"></script>
         <script type="text/javascript" src="js/jquery.fitvids.js"></script>
-        <script type="text/javascript" src="js/owl.carousel.min.js"></script>
         <script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
         <script type="text/javascript" src="js/imagesloaded.pkgd.min.js"></script>
         <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
         <script type="text/javascript" src="js_1"></script>
-        <script type="text/javascript" src="js/gmap3.min.js"></script>
         <script type="text/javascript" src="js/wow.min.js"></script>
         <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
         <script type="text/javascript" src="js/jquery.simple-text-rotator.min.js"></script>
