added another project weather-eats

--- a/index.html
+++ b/index.html
@@ -242,8 +242,6 @@
                             <h2 class="work-title">Drink. Drank. Drunk.</h2>
                             <div class="work-descr portfolioDescr">
                             Used three explicitly different API libraries to create a fun web-application gauges how drunk the user is by implementing jQuery and Javascript for its logic.
-
-
                                 <br>
                                 <br>
                                 <a href="http://hunhowardkim.fun/drinkdrankdrunk/drink-dont-drive/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
@@ -260,6 +258,39 @@
                                             <li class="portfolioLi">Bootstrap</li>
                                             <li class="portfolioLi">HTML</li>
                                             <li class="portfolioLi">CSS</li>
+                                        </ul>
+                                   </div>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- End Work Item -->
+                        <!-- Work Item (Lightbox) -->
+                        <li class="work-item mix photography">
+                            <h2 class="work-title">Weather Eats</h2>
+                            <div class="work-descr portfolioDescr">
+                              A proof-of-concept web application that takes the user's zipcode where it then searches
+                              for the weather using Open Weather API. It then dynamically displays restaurants from the
+                              Yelp API and plays music from the Youtube API based on the zipcode and weather criterias.
+                                <br>
+                                <br>
+                                <a href="http://hunhowardkim.fun/weather-eats/dist/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="https://github.com/dangdennis/weather-eats7" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
+                            </div>
+                            <div class="mfp-image">
+                                <div class="work-img">
+                                    <img src="images/weather-eats.gif" alt="Work">
+                                </div>
+                                <div class="work-intro removeOpacity">
+                                    <div class="work-descr">
+                                        <ul class="work-descr portfolioUl">
+                                            <li class="portfolioLi">JavaScript</li>
+                                            <li class="portfolioLi">ReactJS</li>
+                                            <li class="portfolioLi">Redux</li>
+                                            <li class="portfolioLi">HTML</li>
+                                            <li class="portfolioLi">NodeJS</li>
+                                            <li class="portfolioLi">ExpressJS</li>
+                                            <li class="portfolioLi">CSS</li>
+                                            <li class="portfolioLi">Bootstrap 4</li>
                                         </ul>
                                    </div>
                                 </div>
