--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                               Yelp API and plays music from the Youtube API based on the zipcode and weather criterias.
                                 <br>
                                 <br>
-                                <a href="http://hunhowardkim.fun/weather-eats/dist/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="http://weather-eats.hunhowardkim.fun" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                                 <a href="https://github.com/dangdennis/weather-eats7" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
                             </div>
                             <div class="mfp-image">
