added nodejs and some other styling related things

--- a/index.html
+++ b/index.html
@@ -239,33 +239,6 @@
                         <!-- End Work Item -->
                         <!-- Work Item (Lightbox) -->
                         <li class="work-item mix photography">
-                            <h2 class="work-title">Drink. Drank. Drunk.</h2>
-                            <div class="work-descr portfolioDescr">
-                            Used three explicitly different API libraries to create a fun web-application gauges how drunk the user is by implementing jQuery and Javascript for its logic.
-                                <br>
-                                <br>
-                                <a href="http://hunhowardkim.fun/drinkdrankdrunk/drink-dont-drive/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
-                                <a href="https://github.com/dangdennis/drink-dont-drive" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
-                            </div>
-                            <div class="mfp-image">
-                                <div class="work-img">
-                                    <img src="images/ddd.png" alt="Work">
-                                </div>
-                                <div class="work-intro removeOpacity">
-                                    <div class="work-descr">
-                                        <ul class="work-descr portfolioUl">
-                                            <li class="portfolioLi">JavaScript</li>
-                                            <li class="portfolioLi">Bootstrap</li>
-                                            <li class="portfolioLi">HTML</li>
-                                            <li class="portfolioLi">CSS</li>
-                                        </ul>
-                                   </div>
-                                </div>
-                            </div>
-                        </li>
-                        <!-- End Work Item -->
-                        <!-- Work Item (Lightbox) -->
-                        <li class="work-item mix photography">
                             <h2 class="work-title">Weather Eats</h2>
                             <div class="work-descr portfolioDescr">
                               A proof-of-concept web application that takes the user's zipcode where it then searches
@@ -402,6 +375,14 @@
                                     </svg>
                                 </div>
                                 Git
+                            </a>
+                        </li>
+                        <li>
+                            <a class="skillNotActive" data-toggle="tab">
+                                <div class="alt-tabs-icon">
+                                    <img src='images/node.png'/>
+                                </div>
+                                NodeJS
                             </a>
                         </li>
                         </ul>
