made minor changes to styling and linked resume on bottom of page -Howard

--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
                     <div class="footer-social-links mb-110 mb-xs-60">
                         <a href="https://www.linkedin.com/in/hkim142/" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="https://github.com/hunkim2" title="Github" target="_blank"><i class="fa fa-github"></i></a>
+                        <a href="href="images/resume.pdf"" title="Resume" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
                         <!-- <a href="" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a> -->
                     </div>
                     <!-- End Social Links -->
