changed minor styles fixed links and other minor changes

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <br>
                                 <br>
                                 <a href='http://www.supersmashstats.com' target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
-                                <a href="https://github.com/Learning-Fuze/c5.17_smash_stats/tree/dev" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
+                                <a href="https://github.com/madenney/super-smash-stats" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
@@ -247,7 +247,7 @@
                                 <br>
                                 <br>
                                 <a href="http://hunhowardkim.fun/weather-eats/dist/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
-                                <a href="https://github.com/dangdennis/weather-eats7" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
+                                <a href="https://github.com/dangdennis/weather-eats" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
@@ -411,7 +411,8 @@
                                         <div class="ci-title font-alt">
                                             Phone
                                         </div>
-                                        <div class="ci-text phone">
+                                        <div class="ci-text">
+                                          <a href='tel:+17146594517' class='phone'></a>
                                         </div>
                                     </div>
                                 </div>
@@ -528,7 +529,7 @@
                     <div class="footer-social-links mb-110 mb-xs-60">
                         <a href="https://www.linkedin.com/in/hkim142/" title="LinkedIn+" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="https://github.com/hunkim2" title="Github" target="_blank"><i class="fa fa-github"></i></a>
-                        <a href="href="images/resume.pdf"" title="Resume" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+                        <a href="images/resume.pdf" title="Resume" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
                         <!-- <a href="" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a> -->
                     </div>
                     <!-- End Social Links -->
