added latest applications to portfolio

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <ul class="clearlist scroll-nav local-scroll">
                             <li class="active"><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <!-- <li><a href="#applications">Applications</a></li> -->
+                            <li><a href="#applications">Applications</a></li>
                             <li><a href="#skills">Skills</a></li>
                             <li><a href="#contact">Contact</a></li>
                             <!-- add your resume  -->
@@ -158,7 +158,7 @@
             <!-- End Divider -->
 
             <!-- Portfolio Section -->
-            <!-- <section class="page-section" id="applications">
+            <section class="page-section" id="applications">
                 <div class="relative">
                     <h2 class="section-title font-alt mb-70 mb-sm-40">
                         Applications Developed
@@ -172,11 +172,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- Works Grid -->
-                    <!-- <ul class="works-grid work-grid-3 work-grid-gut clearfix font-alt hover-white hide-titles" id="work-grid"> -->
+                    <ul class="works-grid work-grid-3 work-grid-gut clearfix font-alt hover-white hide-titles" id="work-grid">
                         <!-- Work Item (Lightbox) -->
-                        <!-- <li class="work-item mix photography">
+                        <li class="work-item mix photography">
                             <h2 class="work-title">Super Smash Stats</h2>
                             <div class="work-descr portfolioDescr">
                               A website that dynamically displays various statistics of professional Super Smash Bro's Melee players.
@@ -205,53 +205,52 @@
                                    </div>
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
                         <!-- End Work Item -->
                         <!-- Work Item (Lightbox) -->
-                        <!-- <li class="work-item mix photography">
-                            <h2 class="work-title">Othello</h2>
+                        <li class="work-item mix photography">
+                            <h2 class="work-title">Careosity</h2>
                             <div class="work-descr portfolioDescr">
-                              A hackthon winning board game designed and built by two other junior developers;
-                              utilizes jQuery and Javascript to dynamically create the board based on the player's
-                              choice of either the Dark or Light side of the force.
+                              A web/mobile application that focuses on deliverying quality care through collaboration and data analysis. Utilizing RBAC, a user
+                              can navigate through specific portions of the application to communicate with their teammates as well as create data entry points
+                              to track productivity and completion of tasks.
                                 <br>
                                 <br>
-                                <a href="http://hunhowardkim.fun/reversi/reversi/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
-                                <a href="https://github.com/hunkim2/reversi/tree/hkim17" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
+                                <a href="https://home.careosity.com/#/login" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/reversi.png" alt="Work">
+                                    <img src="images/cts.png" alt="Work">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
                                         <ul class="work-descr portfolioUl">
-                                            <li class="portfolioLi">JavaScript</li>
-                                            <li class="portfolioLi">Bootstrap</li>
-                                            <li class="portfolioLi">jQuery</li>
-                                            <li class="portfolioLi">HTML</li>
-                                            <li class="portfolioLi">CSS</li>
+                                            <li class="portfolioLi">JavaScript</li>                                            
+                                            <li class="portfolioLi">ReactJS</li>
+                                            <li class="portfolioLi">Redux</li>
+                                            <li class="portfolioLi">SCSS</li>
+                                            <li class="portfolioLi">REST APIs</li>
+                                            <li class="portfolioLi">Java</li>
+                                            <li class="portfolioLi">mySQL</li>
                                         </ul>
                                    </div>
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
                         <!-- End Work Item -->
                         <!-- Work Item (Lightbox) -->
-                        <!-- <li class="work-item mix photography">
-                            <h2 class="work-title">Weather Eats</h2>
+                        <li class="work-item mix photography">
+                            <h2 class="work-title">Med2U</h2>
                             <div class="work-descr portfolioDescr">
-                              A proof-of-concept web application that takes the user's zipcode where it then searches
-                              for the weather using Open Weather API. It then dynamically displays restaurants from the
-                              Yelp API and plays music from the Youtube API based on the zipcode and weather criterias.
+                              A diverse web/mobile application that allows tracking, creating, and routine availability of medical orders
+                              to be delivered and maintained.
                                 <br>
                                 <br>
-                                <a href="http://weather-eats.hunhowardkim.fun" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
-                                <a href="https://github.com/dangdennis/weather-eats" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>
+                                <a href="http://app-7866.on-aptible.com/#/" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/weather-eats.gif" alt="Work">
+                                    <img src="images/m2u.png" alt="Work">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
@@ -259,21 +258,20 @@
                                             <li class="portfolioLi">JavaScript</li>
                                             <li class="portfolioLi">ReactJS</li>
                                             <li class="portfolioLi">Redux</li>
-                                            <li class="portfolioLi">HTML</li>
-                                            <li class="portfolioLi">NodeJS</li>
-                                            <li class="portfolioLi">ExpressJS</li>
-                                            <li class="portfolioLi">CSS</li>
-                                            <li class="portfolioLi">Bootstrap 4</li>
+                                            <li class="portfolioLi">SCSS</li>
+                                            <li class="portfolioLi">REST APIs</li>
+                                            <li class="portfolioLi">Java</li>
+                                            <li class="portfolioLi">mySQL</li>
                                         </ul>
                                    </div>
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
                         <!-- End Work Item -->
-                    <!-- </ul> -->
+                    </ul>
                     <!-- End Works Grid -->
-                <!-- </div>
-            </section> -->
+                </div>
+            </section>
             <!-- Divider -->
             <hr class="mt-0 mb-0 ">
             <!-- End Divider -->
