added different photos for twitter bot and removed m2u reconfigured php mailer

--- a/index.html
+++ b/index.html
@@ -240,28 +240,25 @@
                         <!-- End Work Item -->
                         <!-- Work Item (Lightbox) -->
                         <li class="work-item mix photography">
-                            <h2 class="work-title">Med2U</h2>
+                            <h2 class="work-title">Twitter-Bot</h2>
                             <div class="work-descr portfolioDescr">
-                              A diverse web/mobile application that allows tracking, creating, and routine availability of medical orders
-                              to be delivered and maintained.
+                              A node application that takes themes from the popular animated show <i>Rick and Morty</i>. Using NodeJS and third-party APIs
+                              to reply to followers with the top post from r/ProgrammerHumor on Reddit.
                                 <br>
                                 <br>
-                                <a href="http://app-7866.on-aptible.com/#/" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="https://twitter.com/let_hunkim" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="https://github.com/hunkim2/twitter_reddit_bot" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>                                
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/m2u.png" alt="Work">
+                                    <img src="images/twitter_bot.jpg" alt="Twitter Bot">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
                                         <ul class="work-descr portfolioUl">
-                                            <li class="portfolioLi">JavaScript</li>
-                                            <li class="portfolioLi">ReactJS</li>
-                                            <li class="portfolioLi">Redux</li>
-                                            <li class="portfolioLi">SCSS</li>
-                                            <li class="portfolioLi">REST APIs</li>
-                                            <li class="portfolioLi">Java</li>
-                                            <li class="portfolioLi">mySQL</li>
+                                            <li class="portfolioLi">NodeJS</li>
+                                            <li class="portfolioLi">FileSystem</li>
+                                            <li class="portfolioLi">APIs</li>
                                         </ul>
                                    </div>
                                 </div>
