--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
                               to track productivity and completion of tasks.
                                 <br>
                                 <br>
-                                <a href="https://home.careosity.com/#/login" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="https://home.careosity.com/#/login" target="_blank" class="fa fa-desktop portfolioLogo">Live</a> &nbsp
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
-                                    <img src="images/cts.png" alt="Work">
+                                    <img src="images/careosity.gif" alt="Work">
                                 </div>
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
@@ -264,6 +264,32 @@
                                 </div>
                             </div>
                         </li>
+                        <!-- Work Item (Lightbox) -->
+                        <!-- <li class="work-item mix photography">
+                            <h2 class="work-title">Reversi</h2>
+                            <div class="work-descr portfolioDescr">
+                              A fun board game that utilizes a Star Wars theme to replicate the game play of Reversi(otherwise known as Othello).
+                              Choose the Dark Side or the Light Side and fight against a bot determined to beat you.
+                                <br>
+                                <br>
+                                <a href="https://hunkim.io/reversi/index.html" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="https://github.com/hunkim2/reversi" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>                                
+                            </div>
+                            <div class="mfp-image">
+                                <div class="work-img">
+                                    <img src="images/reversi.png" alt="Reversi">
+                                </div>
+                                <div class="work-intro removeOpacity">
+                                    <div class="work-descr">
+                                        <ul class="work-descr portfolioUl">
+                                            <li class="portfolioLi">NodeJS</li>
+                                            <li class="portfolioLi">FileSystem</li>
+                                            <li class="portfolioLi">APIs</li>
+                                        </ul>
+                                   </div>
+                                </div>
+                            </div>
+                        </li> -->
                         <!-- End Work Item -->
                     </ul>
                     <!-- End Works Grid -->
