added link and pictures and reversi

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                               to track productivity and completion of tasks.
                                 <br>
                                 <br>
-                                <a href="https://home.careosity.com/#/login" target="_blank" class="fa fa-desktop portfolioLogo">Live</a> &nbsp
+                                <a href="https://home.careosity.com/#/login" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
                             </div>
                             <div class="mfp-image">
                                 <div class="work-img">
@@ -265,7 +265,7 @@
                             </div>
                         </li>
                         <!-- Work Item (Lightbox) -->
-                        <!-- <li class="work-item mix photography">
+                        <li class="work-item mix photography">
                             <h2 class="work-title">Reversi</h2>
                             <div class="work-descr portfolioDescr">
                               A fun board game that utilizes a Star Wars theme to replicate the game play of Reversi(otherwise known as Othello).
@@ -282,14 +282,43 @@
                                 <div class="work-intro removeOpacity">
                                     <div class="work-descr">
                                         <ul class="work-descr portfolioUl">
-                                            <li class="portfolioLi">NodeJS</li>
-                                            <li class="portfolioLi">FileSystem</li>
-                                            <li class="portfolioLi">APIs</li>
+                                            <li class="portfolioLi">jQuery</li>
+                                            <li class="portfolioLi">Javascript</li>
+                                            <li class="portfolioLi">HTML5</li>
+                                            <li class="portfolioLi">CSS</li>
+                                            <li class="portfolioLi">Bootstrap</li>
                                         </ul>
                                    </div>
                                 </div>
                             </div>
-                        </li> -->
+                        </li>
+                        <li class="work-item mix photography">
+                            <h2 class="work-title">Weather-Eats</h2>
+                            <div class="work-descr portfolioDescr">
+                                This proof-of-concept application takes a user's zipcode, serves them their local eateries based upon their current weather, along with mood-matching music. The application interfaces with Yelp's latest V3.0 API, Yelp Fusion, OpenWeatherAPI, and Youtube API.
+                                <br>
+                                <br>
+                                <a href="http://weather-eats.hunkim.io" target="_blank" class="fa fa-desktop portfolioLogo"> Live</a> &nbsp
+                                <a href="https://github.com/dangdennis/weather-eats" target="_blank" class="fa fa-github portfolioLogo"> GitHub</a>                                
+                            </div>
+                            <div class="mfp-image">
+                                <div class="work-img">
+                                    <img src="images/weather-eats.gif" alt="Reversi">
+                                </div>
+                                <div class="work-intro removeOpacity">
+                                    <div class="work-descr">
+                                        <ul class="work-descr portfolioUl">
+                                            <li class="portfolioLi">ReactJS</li>
+                                            <li class="portfolioLi">Redux</li>
+                                            <li class="portfolioLi">HTML5</li>
+                                            <li class="portfolioLi">Bootstrap 4</li>
+                                            <li class="portfolioLi">NodeJS</li>
+                                            <li class="portfolioLi">ExpressJS</li>
+                                        </ul>
+                                   </div>
+                                </div>
+                            </div>
+                        </li>
                         <!-- End Work Item -->
                     </ul>
                     <!-- End Works Grid -->
